--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/compiler-sfc": "^3.1.5",
+    "eslint": "^8.4.1",
+    "eslint-plugin-vue": "^8.2.0",
     "vite": "^2.4.4"
   }
 }
